# G1_Project

./: .gitignore  XingJiang002.pkl  extract_amp_data.py  xinjiang_amp_fixed.npz
RoboMimic_Deploy_fixes/: OurDance.yaml  (+1 more)
unitree_rl_lab/deploy/robots/go2w/: CMakeLists.txt  main.cpp
unitree_rl_lab/deploy/robots/go2w/config/: config.yaml
unitree_rl_lab/deploy/robots/go2w/src/: State_RLBase.cpp
unitree_rl_lab/source/unitree_rl_lab/: pyproject.toml  setup.py
unitree_rl_lab/source/unitree_rl_lab/config/: extension.toml
unitree_rl_lab/source/unitree_rl_lab/docs/: CHANGELOG.rst
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/: ui_extension_example.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/assets/robots/: unitree.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/: __init__.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/agents/: rsl_rl_ppo_cfg.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/mdp/: __init__.py  observations.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/go2/: __init__.py  velocity_env_cfg.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/agents/: __init__.py  amp_ppo_cfg.py  rsl_rl_ppo_cfg.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/amp/: __init__.py  core.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/mdp/: __init__.py  commands.py  events.py  observations.py  rewards.py  terminations.py
unitree_rl_lab/source/unitree_rl_lab/unitree_rl_lab/utils/: safe_math.py
(+49 files in other folders)
